[tool.poetry]
name = "transformer-from-sratch"
version = "0.1.0"
description = ""
authors = ["narinemarutyan <narine_m@purlin.com>"]
readme = "README.md"
packages = [{include = "transformer_from_sratch"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
torchtext = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
